[gd_scene load_steps=7 format=2]

[ext_resource path="res://Models/Monk.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.72217
height = 0.002

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("CenterMsg/Viewport")

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
collision_layer = 8
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 2.23639, 0, 0, 0, 1, 0, 1.41162, -0.000882447 )
shape = SubResource( 1 )

[node name="Model" type="Spatial" parent="."]

[node name="Rig" parent="Model" instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.512163, 0.858888, 0, -0.858888, 0.512163, 0, 10.5985, 2.34671 )

[node name="CenterMsg" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.341056, 5.0536, 0 )

[node name="Viewport" type="Viewport" parent="CenterMsg"]
size = Vector2( 600, 150 )
transparent_bg = true

[node name="Label" type="Label" parent="CenterMsg/Viewport"]
margin_right = 1.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "WAITING FOR PLAYERS"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="CenterMsg"]
flip_v = true
billboard = 1
texture = SubResource( 3 )

[node name="startTimer" type="Timer" parent="."]

[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
